--- a/DatingApp.API/Properties/launchSettings.json
+++ b/DatingApp.API/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "windowsAuthentication": true,
+    "anonymousAuthentication": false,
     "iisExpress": {
       "applicationUrl": "http://localhost:30327",
       "sslPort": 44332
