--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings":{
+    "CloudName": "dwoyvv7qn",
+    "ApiKey": "491829174951272",
+    "ApiSecret": "-Fd4uqEmWn2qiVV2T2wxxa4xw2I"
+  }
 }
